--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/template.css" />
+    <title>MedCenter</title>
 </head>
 <body>
-    
+  <header>
+    <div class="container">
+        <div class="logo">
+            <a href=""><img src="assets/images/logo.png" /></a>
+        </div>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li class="active"><a href="">HOME</a></li>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">HOME</a></li>
+                    <li><a href="">HOME</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+  </header>
+
+  <section id="banner">
+
+  </section>
+
 </body>
 </html>
