Finalizado area do banner

--- a/index.html
+++ b/index.html
@@ -29,7 +29,41 @@
   </header>
 
   <section id="banner">
-
+    <div class="container column">
+        <div class="banner_headline">
+            <h1>Top notch experience</h1>
+            <h2>Medicenter is a responsive template perfect fot all screen sizes</h2>
+        </div>
+        <div class="banner_options">
+            <div class="banner1">
+                <div class="banner_title">Emergency Case</div>
+                <div class="banner_desc">Algum texto</div>
+                <a href="">Read more</a>
+            </div>
+            <div class="banner2">
+                <div class="banner_title">Doctors Timetable</div>
+                <div class="banner_desc">Algum texto</div>
+                <a href="">Read more</a>
+            </div>
+            <div class="banner3">
+                <div class="banner_title">Opening Hours</div>
+                <div class="banner_desc">Algum texto</div>
+                <div class="semana">
+                    <div class="monday_friday">Monday-Friday</div>
+                    <div class="horarios">8.00 - 17.00</div>
+                </div>
+                <div class="saturday">
+                    <div class="saturday2">Saturday</div>
+                    <div class="horarios">9.30 - 17.30</div>
+                </div>
+                <div class="sunday">
+                    <div class="sunday2">Sunday</div>
+                    <div class="horarios">9.30 - 15.00</div>
+                </div>
+            </div>
+        </div>
+        
+    </div>
   </section>
 
 </body>
