finalizado secao news

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,64 +8,178 @@
     <link rel="stylesheet" type="text/css" href="assets/css/template.css" />
     <title>MedCenter</title>
 </head>
-<body>
-  <header>
-    <div class="container">
-        <div class="logo">
-            <a href=""><img src="assets/images/logo.png" /></a>
-        </div>
-        <div class="menu">
-            <nav>
-                <ul>
-                    <li class="active"><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                    <li><a href="">HOME</a></li>
-                </ul>
-            </nav>
-        </div>
-    </div>
-  </header>
 
-  <section id="banner">
-    <div class="container column">
-        <div class="banner_headline">
-            <h1>Top notch experience</h1>
-            <h2>Medicenter is a responsive template perfect fot all screen sizes</h2>
-        </div>
-        <div class="banner_options">
-            <div class="banner1">
-                <div class="banner_title">Emergency Case</div>
-                <div class="banner_desc">Algum texto</div>
-                <a href="">Read more</a>
+<body>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <a href=""><img src="assets/images/logo.png" /></a>
             </div>
-            <div class="banner2">
-                <div class="banner_title">Doctors Timetable</div>
-                <div class="banner_desc">Algum texto</div>
-                <a href="">Read more</a>
-            </div>
-            <div class="banner3">
-                <div class="banner_title">Opening Hours</div>
-                <div class="banner_desc">Algum texto</div>
-                <div class="semana">
-                    <div class="monday_friday">Monday-Friday</div>
-                    <div class="horarios">8.00 - 17.00</div>
-                </div>
-                <div class="saturday">
-                    <div class="saturday2">Saturday</div>
-                    <div class="horarios">9.30 - 17.30</div>
-                </div>
-                <div class="sunday">
-                    <div class="sunday2">Sunday</div>
-                    <div class="horarios">9.30 - 15.00</div>
-                </div>
+            <div class="menu">
+                <nav>
+                    <ul>
+                        <li class="active"><a href="">HOME</a></li>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">HOME</a></li>
+                        <li><a href="">HOME</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
-        
-    </div>
-  </section>
+    </header>
+    <section id="banner">
+        <div class="container column">
+            <div class="banner_headline">
+                <h1>Top notch experience</h1>
+                <h2>Medicenter is a responsive template perfect fot all screen sizes</h2>
+            </div>
+            <div class="banner_options">
+                <div class="banner1">
+                    <div class="banner_title">Emergency Case</div>
+                    <div class="banner_desc">Algum texto</div>
+                    <a href="">Read more</a>
+                </div>
+                <div class="banner2">
+                    <div class="banner_title">Doctors Timetable</div>
+                    <div class="banner_desc">Algum texto</div>
+                    <a href="">Read more</a>
+                </div>
+                <div class="banner3">
+                    <div class="banner_title">Opening Hours</div>
+                    <div class="banner_desc">Algum texto</div>
+                    <div class="semana">
+                        <div class="monday_friday">Monday-Friday</div>
+                        <div class="horarios">8.00 - 17.00</div>
+                    </div>
+                    <div class="saturday">
+                        <div class="saturday2">Saturday</div>
+                        <div class="horarios">9.30 - 17.30</div>
+                    </div>
+                    <div class="sunday">
+                        <div class="sunday2">Sunday</div>
+                        <div class="horarios">9.30 - 15.00</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="geral">
+        <div class="container">
+            <section>
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Latest News</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+                    <div class="widget_body flex">
+
+                        <article>
+                            <a href="">
+                            <div class="news_data">
+                                <div class="news_posted_at">12 Dec 12</div>
+                                <div class="news_comments">2</div>
+                            </div>
+                            <div class="news_thumbnail">
+                                <img src="assets/Images/doutor.jpg"/>
+                            </div>
+                            <div class="news_title">
+                                Loren ipson dolor damar sit amar velum
+                            </div>
+                        </a>
+                            <div class="news_resume">
+                                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+                            </div>
+                        </article>
+
+                        <article>
+                            <a href="">
+                            <div class="news_data">
+                                <div class="news_posted_at">12 Dec 12</div>
+                                <div class="news_comments">2</div>
+                            </div>
+                            <div class="news_thumbnail">
+                                <img src="assets/Images/doutor.jpg"/>
+                            </div>
+                            <div class="news_title">
+                                Loren ipson dolor damar sit amar velum
+                            </div>
+                        </a>
+                            <div class="news_resume">
+                                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+                            </div>
+                        </article>
+
+                        <article>
+                            <a href="">
+                            <div class="news_data">
+                                <div class="news_posted_at">12 Dec 12</div>
+                                <div class="news_comments">2</div>
+                            </div>
+                            <div class="news_thumbnail">
+                                <img src="assets/Images/doutor.jpg"/>
+                            </div>
+                            <div class="news_title">
+                                Loren ipson dolor damar sit amar velum
+                            </div>
+                        </a>
+                            <div class="news_resume">
+                                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+                            </div>
+                        </article>
+
+                        <article>
+                            <a href="">
+                            <div class="news_data">
+                                <div class="news_posted_at">12 Dec 12</div>
+                                <div class="news_comments">2</div>
+                            </div>
+                            <div class="news_thumbnail">
+                                <img src="assets/Images/doutor.jpg"/>
+                            </div>
+                            <div class="news_title">
+                                Loren ipson dolor damar sit amar velum
+                            </div>
+                        </a>
+                            <div class="news_resume">
+                                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+                            </div>
+                        </article>
+                    </div>
+                </div>
+            </section>
+            <aside>
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Departments</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+                    <div class="widget_body">
+                       <div class="grupo_blocos">
+                        <div>...</div>
+                        <div>...</div>
+                        <div>...</div>
+                        <div>...</div>
+                        <div>...</div>
+                        <div>...</div>
+                       </div>
+                    </div>
+                </div>
+                    <div class="widget">
+                        <div class="widget_title">
+                            <div class="widget_title_text">Make An Appointment</div>
+                            <div class="widget_title_bar"></div>
+                        </div>
+                        <div class="widget_body">
+                            ...
+                        </div>
+                    </div>
+            </aside>
+        </div>
+    </section>
 
 </body>
+
 </html>
