finished aside, section

--- a/index.html
+++ b/index.html
@@ -78,73 +78,101 @@
 
                         <article>
                             <a href="">
-                            <div class="news_data">
-                                <div class="news_posted_at">12 Dec 12</div>
-                                <div class="news_comments">2</div>
-                            </div>
-                            <div class="news_thumbnail">
-                                <img src="assets/Images/doutor.jpg"/>
-                            </div>
-                            <div class="news_title">
-                                Loren ipson dolor damar sit amar velum
-                            </div>
-                        </a>
+                                <div class="news_data">
+                                    <div class="news_posted_at">12 Dec 12</div>
+                                    <div class="news_comments">2</div>
+                                </div>
+                                <div class="news_thumbnail">
+                                    <img src="assets/Images/doutor.jpg" />
+                                </div>
+                                <div class="news_title">
+                                    Loren ipson dolor damar sit amar velum
+                                </div>
+                            </a>
                             <div class="news_resume">
-                                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+                                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de
+                                impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido
+                                pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos.
+                                Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração
+                                eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60,
+                                quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais
+                                recentemente quando passou a ser integrado a softwares de editoração eletrônica como
+                                Aldus PageMaker.
                             </div>
                         </article>
 
                         <article>
                             <a href="">
-                            <div class="news_data">
-                                <div class="news_posted_at">12 Dec 12</div>
-                                <div class="news_comments">2</div>
-                            </div>
-                            <div class="news_thumbnail">
-                                <img src="assets/Images/doutor.jpg"/>
-                            </div>
-                            <div class="news_title">
-                                Loren ipson dolor damar sit amar velum
-                            </div>
-                        </a>
+                                <div class="news_data">
+                                    <div class="news_posted_at">12 Dec 12</div>
+                                    <div class="news_comments">2</div>
+                                </div>
+                                <div class="news_thumbnail">
+                                    <img src="assets/Images/doutor.jpg" />
+                                </div>
+                                <div class="news_title">
+                                    Loren ipson dolor damar sit amar velum
+                                </div>
+                            </a>
                             <div class="news_resume">
-                                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+                                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de
+                                impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido
+                                pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos.
+                                Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração
+                                eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60,
+                                quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais
+                                recentemente quando passou a ser integrado a softwares de editoração eletrônica como
+                                Aldus PageMaker.
                             </div>
                         </article>
 
                         <article>
                             <a href="">
-                            <div class="news_data">
-                                <div class="news_posted_at">12 Dec 12</div>
-                                <div class="news_comments">2</div>
-                            </div>
-                            <div class="news_thumbnail">
-                                <img src="assets/Images/doutor.jpg"/>
-                            </div>
-                            <div class="news_title">
-                                Loren ipson dolor damar sit amar velum
-                            </div>
-                        </a>
+                                <div class="news_data">
+                                    <div class="news_posted_at">12 Dec 12</div>
+                                    <div class="news_comments">2</div>
+                                </div>
+                                <div class="news_thumbnail">
+                                    <img src="assets/Images/doutor.jpg" />
+                                </div>
+                                <div class="news_title">
+                                    Loren ipson dolor damar sit amar velum
+                                </div>
+                            </a>
                             <div class="news_resume">
-                                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+                                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de
+                                impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido
+                                pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos.
+                                Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração
+                                eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60,
+                                quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais
+                                recentemente quando passou a ser integrado a softwares de editoração eletrônica como
+                                Aldus PageMaker.
                             </div>
                         </article>
 
                         <article>
                             <a href="">
-                            <div class="news_data">
-                                <div class="news_posted_at">12 Dec 12</div>
-                                <div class="news_comments">2</div>
-                            </div>
-                            <div class="news_thumbnail">
-                                <img src="assets/Images/doutor.jpg"/>
-                            </div>
-                            <div class="news_title">
-                                Loren ipson dolor damar sit amar velum
-                            </div>
-                        </a>
+                                <div class="news_data">
+                                    <div class="news_posted_at">12 Dec 12</div>
+                                    <div class="news_comments">2</div>
+                                </div>
+                                <div class="news_thumbnail">
+                                    <img src="assets/Images/doutor.jpg" />
+                                </div>
+                                <div class="news_title">
+                                    Loren ipson dolor damar sit amar velum
+                                </div>
+                            </a>
                             <div class="news_resume">
-                                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos. Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60, quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais recentemente quando passou a ser integrado a softwares de editoração eletrônica como Aldus PageMaker.
+                                Lorem Ipsum é simplesmente uma simulação de texto da indústria tipográfica e de
+                                impressos, e vem sendo utilizado desde o século XVI, quando um impressor desconhecido
+                                pegou uma bandeja de tipos e os embaralhou para fazer um livro de modelos de tipos.
+                                Lorem Ipsum sobreviveu não só a cinco séculos, como também ao salto para a editoração
+                                eletrônica, permanecendo essencialmente inalterado. Se popularizou na década de 60,
+                                quando a Letraset lançou decalques contendo passagens de Lorem Ipsum, e mais
+                                recentemente quando passou a ser integrado a softwares de editoração eletrônica como
+                                Aldus PageMaker.
                             </div>
                         </article>
                     </div>
@@ -157,29 +185,109 @@
                         <div class="widget_title_bar"></div>
                     </div>
                     <div class="widget_body">
-                       <div class="grupo_blocos">
-                        <div>...</div>
-                        <div>...</div>
-                        <div>...</div>
-                        <div>...</div>
-                        <div>...</div>
-                        <div>...</div>
-                       </div>
+                        <div class="grupo_blocos">
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
                     </div>
                 </div>
-                    <div class="widget">
-                        <div class="widget_title">
-                            <div class="widget_title_text">Make An Appointment</div>
-                            <div class="widget_title_bar"></div>
+                <div class="widget">
+                    <div class="widget_title">
+                        <div class="widget_title_text">Make An Appointment</div>
+                        <div class="widget_title_bar"></div>
+                    </div>
+                    <div class="widget_body">
+                        <div class="desc_text">
+                            Uma descrição qualquer aqui
                         </div>
-                        <div class="widget_body">
-                            ...
+                        <div class="logo_contatos">
+                            <div class="linha1">
+                                <div class="img"><img src="assets/Images/call.png" /></div>
+                                <div>by phone: <strong>1-800-643-4300</strong></div>
+                            </div>
+                            <div class="linha2">
+                                <div class="img"><img src="assets/Images/mail.png" /></div>
+                                <div>by e-mail: email@emil.com.br</div>
+                            </div>
+                            <div class="linha3">
+                                <div class="img"><img src="assets/Images/google-forms.png" /></div>
+                                <div>or fill out our form</div>
+                            </div>
                         </div>
                     </div>
+                </div>
             </aside>
         </div>
     </section>
-
+    <footer>
+        <div class="container flexColumn">
+            <div class="footer_menu">
+                <div class="fm_1">
+                    <div class="fm_titulo">Health Insurance</div>
+                    <div class="fm_subtitulo">here in medcenter we have individual -></div>
+                </div>
+                <div class="fm_2">
+                    <div class="fm_titulo">Medical Records</div>
+                    <div class="fm_subtitulo">here in medcenter we have individual -></div>
+                </div>
+                <div class="fm_3">
+                    <div class="fm_titulo">Online Bill Pay</div>
+                    <div class="fm_subtitulo">here in medcenter we have individual -></div>
+                </div>
+            </div>
+            <div class="footer_area">
+                <div class="footer_areaitem">
+                    <div class="widget">
+                        <div class="widget_title">
+                            <div class="widget_title_text">Medcenter Clinic</div>
+                            <div class="widget_title_bar"></div>
+                        </div>
+                        <div class="widget_body">
+                            <div class="">...</div>
+                            <div>...</div>
+                            <div>...</div>
+                            <div>...</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer_areaitem">
+                    <div class="widget">
+                        <div class="widget_title">
+                            <div class="widget_title_text">Latest Posts</div>
+                            <div class="widget_title_bar"></div>
+                        </div>
+                        <div class="widget_body">
+                            <div>...</div>
+                            <div>...</div>
+                            <div>...</div>
+                            <div>...</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer_areaitem">
+                    <div class="widget">
+                        <div class="widget_title">
+                            <div class="widget_title_text">Latest Tweets</div>
+                            <div class="widget_title_bar"></div>
+                        </div>
+                        <div class="widget_body">
+                            <div>...</div>
+                            <div>...</div>
+                            <div>...</div>
+                            <div>...</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="footer_copy">
+                Copyright - Todos direitos reservados
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
