--- a/index.html
+++ b/index.html
@@ -247,10 +247,29 @@
                             <div class="widget_title_bar"></div>
                         </div>
                         <div class="widget_body">
-                            <div class="">...</div>
-                            <div>...</div>
-                            <div>...</div>
-                            <div>...</div>
+                            <div class="mdc_desc_resume">
+                                um impressor desconhecido pegou uma bandeja de tipos e os embaralhou para fazer um
+                                livro de modelos de tipos.
+                            </div>
+                            <div class="medcenter_contatos">
+                                <div class="mdc_endeco">
+                                    Medcenter Clinic<br />
+                                    33 Farlane Street<br />
+                                    Keilor East<br />
+                                    VIC 3033, Australia
+                                </div>
+                                <div class="mdc_phones">
+                                    +123 655 655<br />
+                                    +123 755 755<br />
+                                    medcenter@mail.com
+                                </div>
+                            </div>
+                            <div class="social_medias">
+                                <div class="social_media1"></div>
+                                <div class="social_media2"></div>
+                                <div class="social_media3"></div>
+                                <div class="social_media4"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -261,10 +280,24 @@
                             <div class="widget_title_bar"></div>
                         </div>
                         <div class="widget_body">
-                            <div>...</div>
-                            <div>...</div>
-                            <div>...</div>
-                            <div>...</div>
+                            <div class="lts_posts">
+                                Lorem ipsum dolor sit amet. Quo dolor rerum et quia enim in quibusdam beatae sit debitis.
+                                <div class="time_post">
+                                    6 years ago
+                                </div>
+                            </div>
+                        </div>
+                        <div class="lts_posts">
+                            Lorem ipsum dolor sit amet. Quo dolor rerum et quia enim in quibusdam beatae sit debitis.
+                            <div class="time_post">
+                                6 years ago
+                            </div>
+                        </div>
+                        <div class="lts_posts">
+                            Lorem ipsum dolor sit amet. Quo dolor rerum et quia enim in quibusdam beatae sit debitis.
+                            <div class="time_post">
+                                6 years ago
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -275,10 +308,28 @@
                             <div class="widget_title_bar"></div>
                         </div>
                         <div class="widget_body">
-                            <div>...</div>
-                            <div>...</div>
-                            <div>...</div>
-                            <div>...</div>
+                            <div class="tweets_posts">
+                                Lorem ipsum dolor sit amet. Et odit obcaecati hic natus quae non aperiam magnam qui minus sequi et ratione voluptatem et voluptatem quas et voluptatem exercitationem.
+                                <div class="tweets_timeposts">
+                                    6 years ago
+                                </div>
+                            </div>
+                        </div>
+                        <div class="widget_body">
+                            <div class="tweets_posts">
+                                Lorem ipsum dolor sit amet. Et odit obcaecati hic natus quae non aperiam magnam qui minus sequi et ratione voluptatem et voluptatem quas et voluptatem exercitationem.
+                                <div class="tweets_timeposts">
+                                    6 years ago
+                                </div>
+                            </div>
+                        </div>
+                        <div class="widget_body">
+                            <div class="tweets_posts">
+                                Lorem ipsum dolor sit amet. Et odit obcaecati hic natus quae non aperiam magnam qui minus sequi et ratione voluptatem et voluptatem quas et voluptatem exercitationem.
+                                <div class="tweets_timeposts">
+                                    6 years ago
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
